Projet/y.output
État 140 conflits: 8 décalage/réduction


Grammaire

    0 $accept: programme $end

    1 programme: liste_declarations liste_fonctions

    2 liste_declarations: liste_declarations declaration
    3                   | %empty

    4 liste_fonctions: liste_fonctions fonction
    5                | fonction

    6 declaration: type liste_declarateurs ';'

    7 liste_declarateurs: liste_declarateurs ',' declarateur
    8                   | declarateur

    9 declarateur: IDENTIFICATEUR
   10            | declarateur '[' CONSTANTE ']'

   11 fonction: type IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations liste_instructions '}'
   12         | EXTERN type IDENTIFICATEUR '(' liste_parms ')' ';'

   13 type: VOID
   14     | INT

   15 liste_parms: liste_parms ',' parm
   16            | parm
   17            | %empty

   18 parm: INT IDENTIFICATEUR

   19 liste_instructions: liste_instructions instruction
   20                   | %empty

   21 liste_instructions_in_case: liste_instructions_in_case instruction_in_switch
   22                           | %empty

   23 instruction: selection_in_switch
   24            | instruction_in_switch

   25 instruction_in_switch: iteration
   26                      | saut
   27                      | affectation ';'
   28                      | bloc
   29                      | appel
   30                      | selection_out_switch

   31 iteration: FOR '(' affectation ';' condition ';' affectation ')' instruction
   32          | WHILE '(' condition ')' instruction

   33 selection_out_switch: IF '(' condition ')' instruction
   34                     | IF '(' condition ')' instruction ELSE instruction
   35                     | SWITCH '(' expression ')' instruction

   36 selection_in_switch: CASE CONSTANTE ':' bloc_in_switch
   37                    | DEFAULT ':' bloc_in_switch

   38 saut: BREAK ';'
   39     | RETURN ';'
   40     | RETURN expression ';'

   41 affectation: variable '=' expression

   42 bloc: '{' liste_declarations liste_instructions '}'

   43 bloc_in_switch: liste_declarations liste_instructions_in_case

   44 appel: IDENTIFICATEUR '(' liste_expressions ')' ';'

   45 variable: IDENTIFICATEUR
   46         | variable '[' expression ']'

   47 expression: '(' expression ')'
   48           | expression PLUS expression
   49           | expression MOINS expression
   50           | expression DIV expression
   51           | expression MUL expression
   52           | expression RSHIFT expression
   53           | expression LSHIFT expression
   54           | expression BAND expression
   55           | expression BOR expression
   56           | MOINS expression
   57           | CONSTANTE
   58           | variable
   59           | IDENTIFICATEUR '(' liste_expressions ')'

   60 liste_expressions: liste_expressions ',' expression
   61                  | expression
   62                  | %empty

   63 condition: NOT '(' condition ')'
   64          | condition binary_rel condition
   65          | '(' condition ')'
   66          | expression binary_comp expression

   67 binary_rel: LAND
   68           | LOR

   69 binary_comp: GT
   70            | LT
   71            | GEQ
   72            | LEQ
   73            | EQ
   74            | NEQ


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    '(' (40) 11 12 31 32 33 34 35 44 47 59 63 65
    ')' (41) 11 12 31 32 33 34 35 44 47 59 63 65
    ',' (44) 7 15 60
    ':' (58) 36 37
    ';' (59) 6 12 27 31 38 39 40 44
    '=' (61) 41
    '[' (91) 10 46
    ']' (93) 10 46
    '{' (123) 11 42
    '}' (125) 11 42
    error (256)
    INT <type> (258) 14 18
    VOID <type> (259) 13
    IDENTIFICATEUR <identificateur> (260) 9 11 12 18 44 45 59
    CONSTANTE <constante> (261) 10 36 57
    PLUS <binary_op> (262) 48
    MOINS <binary_op> (263) 49 56
    MUL <binary_op> (264) 51
    DIV <binary_op> (265) 50
    LSHIFT <binary_op> (266) 53
    RSHIFT <binary_op> (267) 52
    BAND <binary_op> (268) 54
    BOR <binary_op> (269) 55
    LT <binary_op> (270) 70
    GT <binary_op> (271) 69
    GEQ <binary_comp> (272) 71
    LEQ <binary_comp> (273) 72
    EQ <binary_comp> (274) 73
    NEQ <binary_comp> (275) 74
    NOT <binary_rel> (276) 63
    LAND <binary_rel> (277) 67
    LOR <binary_rel> (278) 68
    EXTERN <boolean> (279) 12
    RETURN <boolean> (280) 39 40
    BREAK <boolean> (281) 38
    ELSE <boolean> (282) 34
    FOR <boolean> (283) 31
    WHILE <boolean> (284) 32
    IF <selection_nom> (285) 33 34
    SWITCH <selection_nom> (286) 35
    CASE <selection_nom> (287) 36
    DEFAULT <selection_nom> (288) 37
    THEN (289)
    moins (290)
    REL (291)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (47)
        à gauche: 0
    programme <programme> (48)
        à gauche: 1
        à droite: 0
    liste_declarations <liste_declarations> (49)
        à gauche: 2 3
        à droite: 1 2 11 42 43
    liste_fonctions <liste_fonctions> (50)
        à gauche: 4 5
        à droite: 1 4
    declaration <declaration> (51)
        à gauche: 6
        à droite: 2
    liste_declarateurs <liste_declarateurs> (52)
        à gauche: 7 8
        à droite: 6 7
    declarateur <declarateur> (53)
        à gauche: 9 10
        à droite: 7 8 10
    fonction <fonction> (54)
        à gauche: 11 12
        à droite: 4 5
    type <type> (55)
        à gauche: 13 14
        à droite: 6 11 12
    liste_parms <liste_parms> (56)
        à gauche: 15 16 17
        à droite: 11 12 15
    parm <parm> (57)
        à gauche: 18
        à droite: 15 16
    liste_instructions <liste_instructions> (58)
        à gauche: 19 20
        à droite: 11 19 42
    liste_instructions_in_case <liste_instructions> (59)
        à gauche: 21 22
        à droite: 21 43
    instruction <instruction> (60)
        à gauche: 23 24
        à droite: 19 31 32 33 34 35
    instruction_in_switch <instruction> (61)
        à gauche: 25 26 27 28 29 30
        à droite: 21 24
    iteration <iteration> (62)
        à gauche: 31 32
        à droite: 25
    selection_out_switch <selection> (63)
        à gauche: 33 34 35
        à droite: 30
    selection_in_switch <selection> (64)
        à gauche: 36 37
        à droite: 23
    saut <saut> (65)
        à gauche: 38 39 40
        à droite: 26
    affectation <affectation> (66)
        à gauche: 41
        à droite: 27 31
    bloc <bloc> (67)
        à gauche: 42
        à droite: 28
    bloc_in_switch <bloc> (68)
        à gauche: 43
        à droite: 36 37
    appel <appel> (69)
        à gauche: 44
        à droite: 29
    variable <variable> (70)
        à gauche: 45 46
        à droite: 41 46 58
    expression <expression> (71)
        à gauche: 47 48 49 50 51 52 53 54 55 56 57 58 59
        à droite: 35 40 41 46 47 48 49 50 51 52 53 54 55 56 60 61 66
    liste_expressions <liste_expressions> (72)
        à gauche: 60 61 62
        à droite: 44 59 60
    condition <condition> (73)
        à gauche: 63 64 65 66
        à droite: 31 32 33 34 63 64 65
    binary_rel <binary_rel> (74)
        à gauche: 67 68
        à droite: 64
    binary_comp <binary_comp> (75)
        à gauche: 69 70 71 72 73 74
        à droite: 66


État 0

    0 $accept: . programme $end
    1 programme: . liste_declarations liste_fonctions
    2 liste_declarations: . liste_declarations declaration
    3                   | . %empty

    $défaut  réduction par utilisation de la règle 3 (liste_declarations)

    programme           aller à l'état 1
    liste_declarations  aller à l'état 2


État 1

    0 $accept: programme . $end

    $end  décalage et aller à l'état 3


État 2

    1 programme: liste_declarations . liste_fonctions
    2 liste_declarations: liste_declarations . declaration
    4 liste_fonctions: . liste_fonctions fonction
    5                | . fonction
    6 declaration: . type liste_declarateurs ';'
   11 fonction: . type IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations liste_instructions '}'
   12         | . EXTERN type IDENTIFICATEUR '(' liste_parms ')' ';'
   13 type: . VOID
   14     | . INT

    INT     décalage et aller à l'état 4
    VOID    décalage et aller à l'état 5
    EXTERN  décalage et aller à l'état 6

    liste_fonctions  aller à l'état 7
    declaration      aller à l'état 8
    fonction         aller à l'état 9
    type             aller à l'état 10


État 3

    0 $accept: programme $end .

    $défaut  accepter


État 4

   14 type: INT .

    $défaut  réduction par utilisation de la règle 14 (type)


État 5

   13 type: VOID .

    $défaut  réduction par utilisation de la règle 13 (type)


État 6

   12 fonction: EXTERN . type IDENTIFICATEUR '(' liste_parms ')' ';'
   13 type: . VOID
   14     | . INT

    INT   décalage et aller à l'état 4
    VOID  décalage et aller à l'état 5

    type  aller à l'état 11


État 7

    1 programme: liste_declarations liste_fonctions .  [$end]
    4 liste_fonctions: liste_fonctions . fonction
   11 fonction: . type IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations liste_instructions '}'
   12         | . EXTERN type IDENTIFICATEUR '(' liste_parms ')' ';'
   13 type: . VOID
   14     | . INT

    INT     décalage et aller à l'état 4
    VOID    décalage et aller à l'état 5
    EXTERN  décalage et aller à l'état 6

    $défaut  réduction par utilisation de la règle 1 (programme)

    fonction  aller à l'état 12
    type      aller à l'état 13


État 8

    2 liste_declarations: liste_declarations declaration .

    $défaut  réduction par utilisation de la règle 2 (liste_declarations)


État 9

    5 liste_fonctions: fonction .

    $défaut  réduction par utilisation de la règle 5 (liste_fonctions)


État 10

    6 declaration: type . liste_declarateurs ';'
    7 liste_declarateurs: . liste_declarateurs ',' declarateur
    8                   | . declarateur
    9 declarateur: . IDENTIFICATEUR
   10            | . declarateur '[' CONSTANTE ']'
   11 fonction: type . IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations liste_instructions '}'

    IDENTIFICATEUR  décalage et aller à l'état 14

    liste_declarateurs  aller à l'état 15
    declarateur         aller à l'état 16


État 11

   12 fonction: EXTERN type . IDENTIFICATEUR '(' liste_parms ')' ';'

    IDENTIFICATEUR  décalage et aller à l'état 17


État 12

    4 liste_fonctions: liste_fonctions fonction .

    $défaut  réduction par utilisation de la règle 4 (liste_fonctions)


État 13

   11 fonction: type . IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations liste_instructions '}'

    IDENTIFICATEUR  décalage et aller à l'état 18


État 14

    9 declarateur: IDENTIFICATEUR .  [';', ',', '[']
   11 fonction: type IDENTIFICATEUR . '(' liste_parms ')' '{' liste_declarations liste_instructions '}'

    '('  décalage et aller à l'état 19

    $défaut  réduction par utilisation de la règle 9 (declarateur)


État 15

    6 declaration: type liste_declarateurs . ';'
    7 liste_declarateurs: liste_declarateurs . ',' declarateur

    ';'  décalage et aller à l'état 20
    ','  décalage et aller à l'état 21


État 16

    8 liste_declarateurs: declarateur .  [';', ',']
   10 declarateur: declarateur . '[' CONSTANTE ']'

    '['  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 8 (liste_declarateurs)


État 17

   12 fonction: EXTERN type IDENTIFICATEUR . '(' liste_parms ')' ';'

    '('  décalage et aller à l'état 23


État 18

   11 fonction: type IDENTIFICATEUR . '(' liste_parms ')' '{' liste_declarations liste_instructions '}'

    '('  décalage et aller à l'état 19


État 19

   11 fonction: type IDENTIFICATEUR '(' . liste_parms ')' '{' liste_declarations liste_instructions '}'
   15 liste_parms: . liste_parms ',' parm
   16            | . parm
   17            | . %empty  [',', ')']
   18 parm: . INT IDENTIFICATEUR

    INT  décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 17 (liste_parms)

    liste_parms  aller à l'état 25
    parm         aller à l'état 26


État 20

    6 declaration: type liste_declarateurs ';' .

    $défaut  réduction par utilisation de la règle 6 (declaration)


État 21

    7 liste_declarateurs: liste_declarateurs ',' . declarateur
    9 declarateur: . IDENTIFICATEUR
   10            | . declarateur '[' CONSTANTE ']'

    IDENTIFICATEUR  décalage et aller à l'état 27

    declarateur  aller à l'état 28


État 22

   10 declarateur: declarateur '[' . CONSTANTE ']'

    CONSTANTE  décalage et aller à l'état 29


État 23

   12 fonction: EXTERN type IDENTIFICATEUR '(' . liste_parms ')' ';'
   15 liste_parms: . liste_parms ',' parm
   16            | . parm
   17            | . %empty  [',', ')']
   18 parm: . INT IDENTIFICATEUR

    INT  décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 17 (liste_parms)

    liste_parms  aller à l'état 30
    parm         aller à l'état 26


État 24

   18 parm: INT . IDENTIFICATEUR

    IDENTIFICATEUR  décalage et aller à l'état 31


État 25

   11 fonction: type IDENTIFICATEUR '(' liste_parms . ')' '{' liste_declarations liste_instructions '}'
   15 liste_parms: liste_parms . ',' parm

    ','  décalage et aller à l'état 32
    ')'  décalage et aller à l'état 33


État 26

   16 liste_parms: parm .

    $défaut  réduction par utilisation de la règle 16 (liste_parms)


État 27

    9 declarateur: IDENTIFICATEUR .

    $défaut  réduction par utilisation de la règle 9 (declarateur)


État 28

    7 liste_declarateurs: liste_declarateurs ',' declarateur .  [';', ',']
   10 declarateur: declarateur . '[' CONSTANTE ']'

    '['  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 7 (liste_declarateurs)


État 29

   10 declarateur: declarateur '[' CONSTANTE . ']'

    ']'  décalage et aller à l'état 34


État 30

   12 fonction: EXTERN type IDENTIFICATEUR '(' liste_parms . ')' ';'
   15 liste_parms: liste_parms . ',' parm

    ','  décalage et aller à l'état 32
    ')'  décalage et aller à l'état 35


État 31

   18 parm: INT IDENTIFICATEUR .

    $défaut  réduction par utilisation de la règle 18 (parm)


État 32

   15 liste_parms: liste_parms ',' . parm
   18 parm: . INT IDENTIFICATEUR

    INT  décalage et aller à l'état 24

    parm  aller à l'état 36


État 33

   11 fonction: type IDENTIFICATEUR '(' liste_parms ')' . '{' liste_declarations liste_instructions '}'

    '{'  décalage et aller à l'état 37


État 34

   10 declarateur: declarateur '[' CONSTANTE ']' .

    $défaut  réduction par utilisation de la règle 10 (declarateur)


État 35

   12 fonction: EXTERN type IDENTIFICATEUR '(' liste_parms ')' . ';'

    ';'  décalage et aller à l'état 38


État 36

   15 liste_parms: liste_parms ',' parm .

    $défaut  réduction par utilisation de la règle 15 (liste_parms)


État 37

    2 liste_declarations: . liste_declarations declaration
    3                   | . %empty
   11 fonction: type IDENTIFICATEUR '(' liste_parms ')' '{' . liste_declarations liste_instructions '}'

    $défaut  réduction par utilisation de la règle 3 (liste_declarations)

    liste_declarations  aller à l'état 39


État 38

   12 fonction: EXTERN type IDENTIFICATEUR '(' liste_parms ')' ';' .

    $défaut  réduction par utilisation de la règle 12 (fonction)


État 39

    2 liste_declarations: liste_declarations . declaration
    6 declaration: . type liste_declarateurs ';'
   11 fonction: type IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations . liste_instructions '}'
   13 type: . VOID
   14     | . INT
   19 liste_instructions: . liste_instructions instruction
   20                   | . %empty  [IDENTIFICATEUR, RETURN, BREAK, FOR, WHILE, IF, SWITCH, CASE, DEFAULT, '{', '}']

    INT   décalage et aller à l'état 4
    VOID  décalage et aller à l'état 5

    $défaut  réduction par utilisation de la règle 20 (liste_instructions)

    declaration         aller à l'état 8
    type                aller à l'état 40
    liste_instructions  aller à l'état 41


État 40

    6 declaration: type . liste_declarateurs ';'
    7 liste_declarateurs: . liste_declarateurs ',' declarateur
    8                   | . declarateur
    9 declarateur: . IDENTIFICATEUR
   10            | . declarateur '[' CONSTANTE ']'

    IDENTIFICATEUR  décalage et aller à l'état 27

    liste_declarateurs  aller à l'état 15
    declarateur         aller à l'état 16


État 41

   11 fonction: type IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations liste_instructions . '}'
   19 liste_instructions: liste_instructions . instruction
   23 instruction: . selection_in_switch
   24            | . instruction_in_switch
   25 instruction_in_switch: . iteration
   26                      | . saut
   27                      | . affectation ';'
   28                      | . bloc
   29                      | . appel
   30                      | . selection_out_switch
   31 iteration: . FOR '(' affectation ';' condition ';' affectation ')' instruction
   32          | . WHILE '(' condition ')' instruction
   33 selection_out_switch: . IF '(' condition ')' instruction
   34                     | . IF '(' condition ')' instruction ELSE instruction
   35                     | . SWITCH '(' expression ')' instruction
   36 selection_in_switch: . CASE CONSTANTE ':' bloc_in_switch
   37                    | . DEFAULT ':' bloc_in_switch
   38 saut: . BREAK ';'
   39     | . RETURN ';'
   40     | . RETURN expression ';'
   41 affectation: . variable '=' expression
   42 bloc: . '{' liste_declarations liste_instructions '}'
   44 appel: . IDENTIFICATEUR '(' liste_expressions ')' ';'
   45 variable: . IDENTIFICATEUR
   46         | . variable '[' expression ']'

    IDENTIFICATEUR  décalage et aller à l'état 42
    RETURN          décalage et aller à l'état 43
    BREAK           décalage et aller à l'état 44
    FOR             décalage et aller à l'état 45
    WHILE           décalage et aller à l'état 46
    IF              décalage et aller à l'état 47
    SWITCH          décalage et aller à l'état 48
    CASE            décalage et aller à l'état 49
    DEFAULT         décalage et aller à l'état 50
    '{'             décalage et aller à l'état 51
    '}'             décalage et aller à l'état 52

    instruction            aller à l'état 53
    instruction_in_switch  aller à l'état 54
    iteration              aller à l'état 55
    selection_out_switch   aller à l'état 56
    selection_in_switch    aller à l'état 57
    saut                   aller à l'état 58
    affectation            aller à l'état 59
    bloc                   aller à l'état 60
    appel                  aller à l'état 61
    variable               aller à l'état 62


État 42

   44 appel: IDENTIFICATEUR . '(' liste_expressions ')' ';'
   45 variable: IDENTIFICATEUR .  ['[', '=']

    '('  décalage et aller à l'état 63

    $défaut  réduction par utilisation de la règle 45 (variable)


État 43

   39 saut: RETURN . ';'
   40     | RETURN . expression ';'
   45 variable: . IDENTIFICATEUR
   46         | . variable '[' expression ']'
   47 expression: . '(' expression ')'
   48           | . expression PLUS expression
   49           | . expression MOINS expression
   50           | . expression DIV expression
   51           | . expression MUL expression
   52           | . expression RSHIFT expression
   53           | . expression LSHIFT expression
   54           | . expression BAND expression
   55           | . expression BOR expression
   56           | . MOINS expression
   57           | . CONSTANTE
   58           | . variable
   59           | . IDENTIFICATEUR '(' liste_expressions ')'

    IDENTIFICATEUR  décalage et aller à l'état 64
    CONSTANTE       décalage et aller à l'état 65
    MOINS           décalage et aller à l'état 66
    ';'             décalage et aller à l'état 67
    '('             décalage et aller à l'état 68

    variable    aller à l'état 69
    expression  aller à l'état 70


État 44

   38 saut: BREAK . ';'

    ';'  décalage et aller à l'état 71


État 45

   31 iteration: FOR . '(' affectation ';' condition ';' affectation ')' instruction

    '('  décalage et aller à l'état 72


État 46

   32 iteration: WHILE . '(' condition ')' instruction

    '('  décalage et aller à l'état 73


État 47

   33 selection_out_switch: IF . '(' condition ')' instruction
   34                     | IF . '(' condition ')' instruction ELSE instruction

    '('  décalage et aller à l'état 74


État 48

   35 selection_out_switch: SWITCH . '(' expression ')' instruction

    '('  décalage et aller à l'état 75


État 49

   36 selection_in_switch: CASE . CONSTANTE ':' bloc_in_switch

    CONSTANTE  décalage et aller à l'état 76


État 50

   37 selection_in_switch: DEFAULT . ':' bloc_in_switch

    ':'  décalage et aller à l'état 77


État 51

    2 liste_declarations: . liste_declarations declaration
    3                   | . %empty
   42 bloc: '{' . liste_declarations liste_instructions '}'

    $défaut  réduction par utilisation de la règle 3 (liste_declarations)

    liste_declarations  aller à l'état 78


État 52

   11 fonction: type IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations liste_instructions '}' .

    $défaut  réduction par utilisation de la règle 11 (fonction)


État 53

   19 liste_instructions: liste_instructions instruction .
